# seek_scraper

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  PROXY_TEST_RESULTS.md  PROXY_USAGE.md  Proxifly 代理 IP 有效性驗證方法與流程.md  QUICK_START.md  README.md  README_NEW.md  advanced_proxy_tester.py  comprehensive_proxy_validator.py  data_schema_spec.json  debug_page_content.py  debug_url_construction.py  geolocation_validator.py  github_action_test_report.json  github_actions_config_report.md  job_categories.json  main.py  proxy_update_monitor.py  pyproject.toml  requirements.txt  run_simple.py  seek_etl_simple.py  setup.py  setup_env.ps1  simple_proxy_test.py  simple_proxy_validator.py  test_cloudflare_bypass.py  test_direct_search.py  test_diverse_searches.py  test_diverse_with_runner.py  test_fixed_system.py  test_github_action.py  test_improved_integrated_etl.py  test_improved_scraper.py  test_integrated_etl.py  test_link_extraction.py  test_results.json  test_search_criteria.py  (+5 more)
Docs/: 2025-01-25_項目進度報告書.md  2025-09-25T1500_項目進度報告書.md  Figma_Delivery_Collaboration_Guide.md  Figma_Design_System_Overview.md  Figma_Design_System_Specification.md  Figma_Design_Templates.md  Figma_Implementation_Guide.md  Proxy Management 前端版面配置規劃書 v2.0.md  REORGANIZATION_SUMMARY.md  Seek crawler 爬蟲+ETL流程說明.md  github_actions_setup_guide.md  project_structure_spec.md  seek_scraper_prompt_optimized.md  system_design_spec.md  tech_stack_spec.md  前端版面配置規劃書.md  專案 Markdown MDX 文件風格.md  專案文件命名規範.md  專案資料夾說明.md  專案開發環境啟動步驟手冊.md  雲端定時任務解決方案.md
config/: app_config.json  etl_config.json  test_config.json
data/: proxies.json  test_results.json
debug_output/: all_job_links.json  all_links.json  bypass_content_1.html  debug_all_links.json  debug_page.html  direct_search_test_20250926_160926.json  diverse_search_results_20250926_131204.json  diverse_search_results_20250926_131317.json  diverse_search_results_20250926_131347.json  diverse_search_runner_results_20250926_134832.json  diverse_search_runner_results_20250926_160716.json  diverse_search_runner_results_20250926_164227.json  improved_links.json  job_links.json  page.html  page_content.html  search_criteria_test_20250926_161300.json  simple_diverse_search_results_20250926_131706.json  simple_diverse_search_results_20250926_131806.json  url_format_test_20250926_161041.json
proxy-management-frontend/: DEVELOPMENT_GUIDE.md  PERFORMANCE_GUIDE.md  index.html  package-lock.json  package.json
proxy_management/: cloud_scheduler.py  (+7 more)
(+1911 files in other folders)
