[project]
name = "seek-job-crawler"
version = "1.0.0"
description = "A professional job crawler system for SEEK website with proxy support"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "fake-useragent>=1.4.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "asyncio>=3.4.3",
    "pathlib>=1.0.1",
    "datetime>=5.1",
    "typing-extensions>=4.8.0",
    "urllib3>=2.1.0",
    "certifi>=2023.11.17",
    "charset-normalizer>=3.3.2",
    "idna>=3.6",
    "async-timeout>=4.0.3",
    "attrs>=23.2.0",
    "multidict>=6.0.4",
    "yarl>=1.9.4",
    "frozenlist>=1.4.1",
    "aiosignal>=1.3.1",
    "fsspec>=2023.12.2",
    "numpy>=1.26.2",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3.post1",
    "tzdata>=2023.4",
    "annotated-types>=0.6.0",
    "greenlet>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
seek-crawler = "src.main_simple:main"
proxy-tester = "proxy_testing.fixed_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "fake_useragent.*",
    "flask.*",
    "flask_cors.*",
]
ignore_missing_imports = true
